--- a/css/test.css
+++ b/css/test.css
@@ -79,7 +79,7 @@ nav {
   border-radius: 40px 40px 0 0;
   margin-top: -40px;
   position: relative;
-  
+
   /* border: 2px solid green; */
 }
 
@@ -91,7 +91,7 @@ nav {
   padding: 17px;
   animation: fadeUp 0.8s ease-out forwards;
 
-   /* border: 2px solid red; */
+  /* border: 2px solid red; */
 }
 
 .menu-header {
@@ -113,14 +113,22 @@ nav {
 
 .card-favorite svg {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 24px;
   height: 24px;
 }
 
+.heart-outline {
+  stroke: black;
+  fill: none;
+  z-index: 2;
+}
+
 .card-favorite {
   position: absolute;
-  top: 30px;
-  right: 0;
+  /* top: 30px;
+  right: 0; */
   background: none;
   border: none;
   padding: 0;
@@ -128,7 +136,10 @@ nav {
   width: 40px;
   height: 40px;
   display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
+  /* pour clip-path */
 }
 
 .heart-fill {
@@ -140,6 +151,11 @@ nav {
 
 .card-favorite:hover .heart-fill {
   clip-path: inset(0 0 0 0);
+}
+
+.card-favorite:hover .heart-outline {
+  stroke: transparent;
+  transition: stroke 0.3s ease;
 }
 
 .menu-category {
@@ -191,15 +207,32 @@ nav {
   overflow: hidden;
 }
 
+input[type="checkbox"] {
+  position: absolute;   /* sort du flux et n’occupe plus d’espace */
+  opacity: 0;           /* invisible */
+  width: 1px;           /* taille minuscule */
+  height: 1px;
+  margin: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);  /* cache totalement l’élément (clip) */
+  clip-path: inset(50%);
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+}
+
+
 .menu-item input[type="checkbox"] {
   display: none;
 }
 
 .menu-content {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   width: 100%;
   padding: 10px;
-  /* transition: padding-right 0.4s ease, background-color 0.4s ease; */
+  box-sizing: border-box;
 }
 
 /* Zone cliquable sur tout l'article */
@@ -229,12 +262,16 @@ nav {
   z-index: 1;
 }
 
-.menu-item input[type="checkbox"]:checked + .menu-content .square {
+.menu-item input[type="checkbox"]:checked+.menu-content .square {
   transform: translateX(0);
   opacity: 1;
 }
 
-.menu-item input[type="checkbox"]:checked + .menu-content .item-text {
+.menu-item input[type="checkbox"]:checked+.menu-content .item-text {
+  padding-right: 70px;
+}
+
+.menu-item input[type="checkbox"]:checked + .menu-content h4 {
   padding-right: 70px;
 }
 
@@ -244,16 +281,18 @@ nav {
   color: white;
 }
 
-.menu-item input[type="checkbox"]:checked + .menu-content .check i {
+.menu-item input[type="checkbox"]:checked+.menu-content .check i {
   animation: rotateCheck 0.6s ease;
 }
 
 /* Texte long */
 .menu-item h4,
-.item-text p {
-  white-space: nowrap;
+.item-text p {white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  min-width: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .menu-item h4 {
@@ -261,6 +300,7 @@ nav {
   font-weight: 500;
   font-size: 18px;
   padding: 0 10px 7px;
+  transition: padding-right 0.4s ease; 
 }
 
 .item-text {
@@ -293,6 +333,7 @@ nav {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(-360deg);
   }
@@ -303,15 +344,28 @@ nav {
     opacity: 0;
     transform: translateY(100px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
-.menu-item:nth-child(1) { animation-delay: 0.2s; }
-.menu-item:nth-child(2) { animation-delay: 0.4s; }
-.menu-item:nth-child(3) { animation-delay: 0.6s; }
+.menu-item:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.menu-item:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+.menu-item:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.menu-item:nth-child(4) {
+  animation-delay: 0.8s;
+}
 
 
 /******** FIN MENU-ITEM  ********/
@@ -352,8 +406,8 @@ footer {
   background-color: var(--grey-background);
   color: white;
   padding-left: 15px;
-  
-   /* border: 2px solid orange; */
+
+  /* border: 2px solid orange; */
 }
 
 .footer-title {
@@ -383,10 +437,10 @@ footer i {
 }
 
 
-@media (width >= 768px) {
+@media (width >=768px) {
   /* Tablette */
 
-  
+
   footer {
     height: 115px;
     display: flex;
@@ -410,7 +464,7 @@ footer i {
   }
 }
 
-@media (width >= 1024px) {
+@media (width >=1024px) {
   /* Desktop */
 
   .section-wrapper {
@@ -472,7 +526,7 @@ footer i {
   .restaurant-card {
     height: 251px;
   }
-   
+
   .menu-section {
     max-width: 1095px;
     /* margin: 0 auto; */
@@ -494,7 +548,8 @@ footer i {
   }
 
   .card-favorite {
-    position: relative; /* Garder la superposition */
+    position: relative;
+    /* Garder la superposition */
     top: auto;
     right: auto;
     width: 40px;
